Section 14.2 typed up
Typed up 14.2 on line integrals and fixed a few errors in 14.1

--- a/text/14_Vector_Fields.tex
+++ b/text/14_Vector_Fields.tex
@@ -3,7 +3,7 @@
 For an ordinary scalar function, the input is a number $x$ and the output is a number
 $f(x)$. For a vector field (or vector function), the input is a point $(x, y)$ and the output
 is a two-dimensional vector $F(x, y)$. There is a ``field'' of vectors, one at every point.
-In three dimensions the input point is $(x, y, z)$ and the output vector $\vec F}$ has three
+In three dimensions the input point is $(x, y, z)$ and the output vector $\vec F$ has three
 components.\\
 
 Let $R$ be a region in the $xy$-plane. A \textbf{vector field}  $\vec F$ assigns to every point
