--- a/text/14_Vector_Fields.tex
+++ b/text/14_Vector_Fields.tex
@@ -22,7 +22,7 @@ $$\vec F(x,y,z) = M(z,y,z)\vec i + N(x,y,z)\vec j + P(x,y,z)\vec k.$$
 \example{vecfield3}{}{A spin field or rotation field goes around the origin
 instead of away from it. Such a field in two dimensions is given by 
 $$\vec S(x,y) = -y \vec i  + x \vec j$$
-as given in Figure \ref{} where the components are $M(x,y) = - y$ and $N(x,y) = x$. Each vector $\vec S(x,y)$ has length \mid \vec S \mid = \sqrt{(-y)^2 + x^2} = r$$
+as given in Figure \ref{} where the components are $M(x,y) = - y$ and $N(x,y) = x$. Each vector $\vec S(x,y)$ has length $$\mid \vec S \mid = \sqrt{(-y)^2 + x^2} = r$$
 Note, however, that $\vec S$ is perpendicular to $\vec R$ as defined above, since their dot product is zero: $\vec S \cdot \vec R = (- y)(x) + (x)(y) = 0$. The
 spin fields $\vec S/r$ and $\vec S/r^2$ have lengths $1$ and $1/r$, respectively.
 See Figure \ref{}.  Notice the blank at $(0,0)$ in these second two spin fields, where these fields are not defined.}\\
